...
    }
    
    static func showSimpleAlert(title: String, message: String) {
        
        let alert = UIAlertController(title: title, message: message, preferredStyle: .Alert)
        
        let cancel = UIAlertAction(title: "OK", style: .Cancel, handler: nil)
        
        alert.addAction(cancel)
        
        dispatch_async(dispatch_get_main_queue(), { () -> Void in
            //This could produce a nil view controller so this message could get lost. I think it's safe enough
            //for a quick demo project though
...
