...
                self.loadingView.hidden = false
            })
            
            //since I made this asynchronous I don't need all these error handlers since they're handled in the callback now.
            //I'll leave them in for now just in case I rethink that
        } catch LoginError.loginInfoIncomplete {
            AppManager.showSimpleAlert("Login Failed", message: "Please provide username and password in order to login.")
        } catch DataManager.DataError.UserNotFound {
            AppManager.showSimpleAlert("User Not Found", message: "Please check your username and try again.")
        } catch LoginError.loginInvalid{
            AppManager.showSimpleAlert("Login Failed", message: "Your username did not match your password. Please check your username and password and try again.")
        } catch {
            AppManager.showSimpleAlert("Login Failed", message: "The application failed to authenticate your account.")
...
