...
                                <rect key="frame" x="174" y="202" width="253" height="30"/>
                                <color key="backgroundColor" red="0.16078431369999999" green="0.3411764706" blue="0.44705882349999998" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="253" id="QR5-Az-8KN"/>
                                    <constraint firstAttribute="height" constant="30" id="v29-Ah-P7l"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <variation key="widthClass=compact" fixedFrame="YES">
                                    <rect key="frame" x="74" y="223" width="253" height="30"/>
                                </variation>
                                <connections>
...
